<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    tools:context=".OnboardingFragmentThree">

    <RelativeLayout
        android:id="@+id/centralLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/onboardingImageThree"
            android:layout_width="@dimen/onboarding_image_size"
            android:layout_height="@dimen/onboarding_image_size"
            android:src="@drawable/hugo_three"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/onboardingTxtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="20sp"
            android:text="@string/onboarding_screen_three_title"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/onboardingImageThree"/>

        <TextView
            android:id="@+id/onboardingTxtMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:layout_marginHorizontal="40sp"
            android:textAlignment="center"
            android:text="@string/onboarding_screen_three_msg"
            android:layout_below="@id/onboardingTxtTitle"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/screen_three_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25sp"
            android:layout_below="@id/onboardingTxtMsg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40sp">

            <TextView
                android:id="@+id/getStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:textColor="@color/colorWhite"
                android:padding="14sp"
                android:background="@color/deep_purple"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>